--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "chart.js": "^3.5.1",
+    "gsap": "^3.8.0",
     "highcharts": "^9.3.0",
     "highcharts-react-official": "^3.1.0",
     "react": "^17.0.2",
